#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Hmat_partialACA_tests hmat_partialACA_tests.cpp)
target_link_libraries(Hmat_partialACA_tests htool)
