#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(PartialACA_tests partialACA_tests.cpp)
target_link_libraries(PartialACA_tests htool)
