#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Point_tests point_tests.cpp)
target_link_libraries(Point_tests htool)
