#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Hmat_fullACA_tests hmat_fullACA_tests.cpp)
target_link_libraries(Hmat_fullACA_tests htool)
