#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Hmatrix_tests hmatrix_tests.cpp)
target_link_libraries(Hmatrix_tests htool)
