#=============================================================================#
#=========================== Executables =====================================#
#=============================================================================#

add_executable(Matrix_tests matrix_tests.cpp)
target_link_libraries(Matrix_tests htool)
